--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h2>Ethereum Private Network Node Simulation</h2>
+  <h2>New Consensus Algorithm Sample and Short Simulation</h2>
   <div>
     <button onclick="addNewValidator()">Add Validator</button>
     <button onclick="assignTransactions()">Assign Transactions</button>
