--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
   <h2>New Consensus Algorithm Sample and Short Simulation</h2>
+  <img src="Sample architecture image.png" alt="Sample architecture Image" width="1000" height="500" style="margin-left: 230px;"><br><br>
   <div>
     <button onclick="addNewValidator()">Add Validator</button>
     <button onclick="assignTransactions()">Assign Transactions</button>
